--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -732,6 +732,7 @@ h6 {
   margin-bottom: 10px;
 }
 
+
 .page-title .breadcrumbs ol {
   display: flex;
   flex-wrap: wrap;
@@ -1916,6 +1917,7 @@ section,
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: top;
   transition: transform 0.6s ease;
 }
 
